Added dome files and positioned content in header

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -2,8 +2,9 @@
   margin: 0 auto;
 }
 
-@mixin flex{
-  display: flex;
-  justify-content: center;
-  align-items: center;
+@mixin display($display, $justify, $align, $gap){
+  display: $display;
+  justify-content: $justify;
+  align-items: $align;
+  gap: $gap;
 }
