--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,22 +1,12 @@
 @use '../abstracts/' as a;
 @use 'sass:map';
 
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
-
-body{
-  font-family:'Manrope', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 1rem;
-  font-weight: map-get(a.$Font-weight, 'normal');
-  line-height: 160%;
-  color: a.$clr-body-text;
-  background-color: a.$clr-base;
-}
 
 /* Heading text styling */
 h1, h2, h3, h4, h5, h6, .display-1, .display-2, .display-3,
  .display-4, .display-5, .display-6{
   font-weight: map-get(a.$Font-weight , extrabold);
-  color: a.$clr-heading;
+  color: var(--clr-heading);
   line-height: 130%;
  }
 
