--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,45 +1,40 @@
 @use '../abstracts/colors' as c;
 @use '../abstracts/variables' as v;
 
-.btn-s{
+.btn-s, .btn-m, .btn-l, .btn-round{
   display: flex;
   width: max-content;
   align-items: center;
   justify-content: center;
   gap: 1em;
+  line-height: 100%;
+}
+
+.btn-s{
   padding: 0.56em 1.25em;
   margin: 0;
   border-radius: 0.25em;
   font-size: 0.875rem;
   font-weight: 600;
-  line-height: 1.1rem;
 
 }
 
 .btn-m{
-  display: flex;
-  width: max-content;
-  align-items: center;
-  justify-content: center;
-  gap: 1em;
   padding: 0.68em 1.75em;
   margin: 0;
   border-radius: 0.375em;
   font-size: 0.875rem;
   font-weight: 600;
+  line-height: 100%;
 }
 
 .btn-l{
-  display: flex;
-  width: max-content;
-  align-items: center;
-  justify-content: center;
-  gap: 1em;
   padding: 0.8em 2em;
   margin: 0;
   border-radius: 0.5em;
   font-size: 1rem;
   font-weight: 600;
+  line-height: 100%;
 }
 
 .btn-primary{
@@ -48,8 +43,9 @@
 }
 
 .btn-store{
-  color: c.$clr-background;
-  background-color: c.$clr-heading;
+  padding-block: .4rem;
+  color: var(--clr-background);
+  background-color: var(--clr-heading);
   height: 3.25rem;
   img{
     height: 100%;
@@ -60,12 +56,20 @@
       display:block;
     }
     small:nth-child(1){
-      font-weight:400;
+      font-weight:600;
       font-size: .6rem;
     }
     small:nth-child(2){
-      font-weight:500;
+      font-weight:600;
       font-size: 1.3rem;
     }
   }
+}
+
+.btn-round{
+  width: 2.6rem;
+  height: 2.6rem;
+  background-color: c.$clr-base;
+  border-radius: 1.3rem;
+  transform: rotate(90deg);
 }
