--- a/src/scss/layouts/_showcase.scss
+++ b/src/scss/layouts/_showcase.scss
@@ -1,6 +1,5 @@
 @use '../abstracts/' as a;
 
-
 .showcase-container{
   background: radial-gradient(circle at center bottom, rgba(a.$primary, .15) 0%, rgba(a.$gradient-2, .1) 42%, rgba(a.$gradient-3, .0) 83%);
 }
@@ -11,9 +10,12 @@
   grid-template-rows: 1fr auto;
   gap: 2rem;
   padding: 0 1rem;
-  margin-bottom: 2rem;
   text-align: center;
   font-size: 1.1rem;
+}
+
+.btn-store{
+  width: 100%;
 }
 
 .appstore{
@@ -23,11 +25,9 @@
 
 }
 
-.discover-more{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
+.discover-more{ 
+  @include a.display(flex, center, center, 1rem);
+  margin-bottom: 1rem;
 }
 
 .mobiles{
@@ -37,8 +37,6 @@
     object-fit: contain;
   }
 }
-
-
 
 @media (min-width: 768px){
 
@@ -50,32 +48,36 @@
   .btn-store-text{
     small{
       display:block;
-    }
-    small:nth-child(1){
-      font-weight:400;
-      font-size: .5rem;
-    }
-    small:nth-child(2){
-      font-weight:500;
-      font-size: .8rem;
+      
+      &:nth-child(1){
+        font-weight:700;
+        font-size: .5rem;
+      }
+      &:nth-child(2){
+        font-weight:800;
+        font-size: .8rem;
+      }
     }
   }
+
   .showcase{
     max-width: 720px;
     margin: 0 auto;
     gap: 1rem;
     grid-template-columns: repeat(12, minmax(0 ,1fr));
   }
+
   .showcase .display-4{
     grid-column: 1 / 13;
     margin: 2rem 0;
   }
+
   .showcase-text{
     grid-column: 1 / 6;
     grid-row: 3 / 4;
     text-align: left;
-    line-height: 1.8rem;
   }
+
   .appstore{
     grid-column: 1 /6;
     grid-row: 4 / 5;
@@ -84,11 +86,19 @@
     margin: 2rem 0;
 
   }
+
+  .btn-store{
+    height: 2.5rem;
+    padding: .4rem;
+    line-height: 80%;
+  }
+
   .discover-more{
     grid-column: 1 /6;
     grid-row: 5 / 6;
     justify-content: left;
   }
+
   .mobiles{
     display: flex;
     align-items: end;
@@ -99,7 +109,9 @@
 
 @media (min-width: 1200px){
   .btn-store{
-    padding: .5rem .5rem;
+    height: 3.25rem;
+    padding: .5rem;
+    line-height: 100%;
   }
   
   .btn-store-text{
@@ -107,17 +119,16 @@
       display:block;
     }
     small:nth-child(1){
-      font-weight:400;
+      font-weight:600;
       font-size: .6rem;
     }
     small:nth-child(2){
-      font-weight:500;
+      font-weight:700;
       font-size: 1.3rem;
     }
   }
 
   .showcase{
-  margin: 0 auto;
   max-width: 1140px;
   }
   
