--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -7,7 +7,7 @@
 
 body{
   font-family:'Manrope', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 1rem;
+  font-size: map-get(a.$Body-font-sizes, 'M');
   font-weight: map-get(a.$Font-weight, 'normal');
   line-height: 160%;
   color: var(--clr-body-text);
