--- a/src/scss/themes/_dark.scss
+++ b/src/scss/themes/_dark.scss
@@ -2,6 +2,7 @@
 @use 'sass:map';
 
 body:has(#dark-toggle:checked){
+  --clr-header: rgb(0, 0, 0, 0.3);
   --clr-base: #{$gray-900};
   --clr-background: #{$black};
   --clr-divider: #{$gray-800};
