added features-2 and testimonials

--- a/src/scss/abstracts/_colors.scss
+++ b/src/scss/abstracts/_colors.scss
@@ -12,7 +12,7 @@ $gray-900: hsl(223, 39%, 7%);
 $black: hsl(0, 0%, 0%);
 
 // Base colors
-$clr-header: rgba(255, 255, 255, 0.3);
+$clr-header: hsla(225, 100%, 98%, 0.3);
 $clr-base: $white;
 $clr-background: $gray-100;
 $clr-secondary: $gray-200;
