--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -40,6 +40,9 @@
 .btn-primary{
   color: c.$clr-background;
   background-color: c.$primary;
+  &:hover{
+    background-color: c.$gradient-3;
+  }
 }
 
 .btn-store{
