--- a/src/scss/layouts/_index.scss
+++ b/src/scss/layouts/_index.scss
@@ -2,4 +2,7 @@
 @forward 'nav';
 @forward 'showcase';
 @forward 'logos';
-@forward 'app-features';
+@forward 'features';
+@forward 'how-it-works';
+@forward 'features2';
+@forward 'testimonials';
