--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -11,6 +11,7 @@ header{
   background-color: var(--clr-header);
   position: sticky;
   top: 0;
+  z-index: 10000;
   backdrop-filter: blur(8px);
 }
 .logo{
