--- a/src/scss/layouts/_index.scss
+++ b/src/scss/layouts/_index.scss
@@ -6,3 +6,6 @@
 @forward 'how-it-works';
 @forward 'features2';
 @forward 'testimonials';
+@forward 'faq';
+@forward 'subscribe';
+@forward 'footer';
