--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -72,7 +72,12 @@
 .btn-round{
   width: 2.6rem;
   height: 2.6rem;
-  background-color: c.$clr-base;
+  background-color: var(--clr-base);
   border-radius: 1.3rem;
   transform: rotate(90deg);
+  
+  &:hover{
+    background-color: c.$primary;
+    color: c.$clr-base
+  }
 }
