--- a/src/scss/layouts/_showcase.scss
+++ b/src/scss/layouts/_showcase.scss
@@ -65,6 +65,7 @@
     margin: 0 auto;
     gap: 1rem;
     grid-template-columns: repeat(12, minmax(0 ,1fr));
+    grid-template-rows: 1fr auto;
   }
 
   .showcase .display-4{
@@ -130,11 +131,12 @@
 
   .showcase{
   max-width: 1140px;
+  grid-template-rows: 3rem min-content;
   }
   
   .showcase .display-4{
     grid-column: 1 / 6;
-    grid-row: 2 / 3;
+    grid-row: 3 / 4;
     font-size: 3.5rem;
     text-align: left;
     margin: 0;
@@ -144,7 +146,14 @@
     grid-column: 1 /6;
     grid-row: 6 / 7;
     justify-content: left;
-    margin: 3rem 0;
+    margin: 1rem 0;
+  }
+  .showcase-text{
+    grid-row: 4 / 5;
+  }
+  .appstore{
+    grid-row: 5 / 6;
+    margin: 0;
   }
 
   .mobiles{
@@ -152,7 +161,7 @@
     display: flex;
     align-items: flex-end;
     grid-column: 6 / 13;
-    grid-row: 1/ 7;
+    grid-row: 2/ 7;
   }
 
 }
