--- a/src/scss/layouts/_testimonials.scss
+++ b/src/scss/layouts/_testimonials.scss
@@ -3,6 +3,7 @@
 .testimonials-container{
   background: var(--clr-background);
 }
+
 .testimonials{
   display: none;
   gap: 1rem;
@@ -10,15 +11,12 @@
   max-width: 1140px;
   margin: 0 auto;
   padding: 4rem 1rem;
-  .comment-card{
-   position: relative; 
-  }
-  h2{
-    font-size: 2.5rem;
-    font-weight: 800;
-  }
-
 }
+
+.comment-card{
+ position: relative; 
+}
+
 .quote-box{
   position: absolute;
   top:-1.5rem;
@@ -29,11 +27,11 @@
   display: grid;
   place-content: center;
   border-radius: .4rem;
-  color: var(--clr-base);
-  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
-  
+  color: a.$white;
+  @include a.shadow(primary-btn);
 }
-.commentary-wrapper{
+
+.comment{
   display: grid;
   gap: 1rem;
   grid-template-rows: auto 1fr auto;
@@ -41,17 +39,21 @@
   background-color: var(--clr-base);
   border-radius: .5rem;
   padding: 2rem 1rem 1rem;
-  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
+  @include a.shadow(l);
 }
+
 .star-outline{
   color: var(--input-placeholder);
 }
+
 .star-filled{
   color: #FFD43B;
 }
+
 .user{
   display: flex;
 }
+
 .user-details{
   display: block;
 }
