--- a/src/scss/themes/_dark.scss
+++ b/src/scss/themes/_dark.scss
@@ -8,22 +8,25 @@ body:has(#dark-toggle:checked){
   --clr-divider: #{$gray-800};
   --clr-heading: #{$white};
   --clr-body-text: #{$white};
+ 
   #apple{
     filter: invert(.8);
   }
   .btn-round{
-    background-color: rgba(255, 255, 255, .05);
-  }
-
-  .btn-store{
-    font-weight: map-get($Font-weight , extrabold);
+    background-color: var(--clr-divider);
+    
+    &:hover{
+      background-color: $primary;
+    }
   }
   .navigation-text{
-    color: $white;
-      
+    color: $white; 
+    
     &:hover{
       color: $primary;
     }
   }
-
+  #accordion li{
+    background-color: var(--clr-background);
+  }
 }
