--- a/src/scss/layouts/_subscribe.scss
+++ b/src/scss/layouts/_subscribe.scss
@@ -35,7 +35,7 @@
   border-radius: 0.3rem 0 0 0.3rem;
 }
 
-input{
+.newsletter input{
   border: 0;
   color: var(--clr-muted);
   height: 3rem;
@@ -43,17 +43,18 @@ input{
   border-radius: 0 0.3rem 0.3rem 0;
   width: calc(100%);
 }
-input::placeholder{
+.newsletter input::placeholder{
   color: var(--clr-placeholder)
 }
-input:focus{
+.newsletter input:focus{
   outline: none;
 }
-input[type="submit"]{
+.newsletter input[type="submit"]{
   position: absolute;
   top: 0;
   right: 0;
   width: min-content;
+  color: a.$white;
   font-size: 1rem;
   font-weight: 300;
   padding: 1rem 1.5rem;
