--- a/src/scss/layouts/faq.scss
+++ b/src/scss/layouts/faq.scss
@@ -71,10 +71,12 @@
 #accordion span{
   background-color: var(--clr-divider);
   width: 1.6rem;
-  height: 1.6rem;
-  display: grid;
-  place-content: center;
-  border-radius: 1rem;
+  aspect-ratio: 1;
+  display: flex;
+  flex-shrink: 0;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
 }
 
 #accordion li:has(input[type="radio"]:checked){
