adding more accessibility to the site navigation

--- a/src/scss/layouts/_showcase.scss
+++ b/src/scss/layouts/_showcase.scss
@@ -30,9 +30,10 @@
 
 }
 
+
 .discover-more{ 
   @include a.display(flex, center, center, 1rem);
-  margin-bottom: 1rem;
+  padding-bottom: 2rem;
 }
 
 .mobiles{
